Создано с помощью Colaboratory

--- a/Python/face_detection.ipynb
+++ b/Python/face_detection.ipynb
@@ -6,7 +6,7 @@
       "name": "face_detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOLQq0rU/avRTEBb1pJXCLv",
+      "authorship_tag": "ABX9TyMmiPThbdZmRg9KwnyWIYUM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -73,7 +74,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ap-mTMPJ46NJ",
-        "outputId": "4c9e3c74-bab7-4e98-b692-79132de8fa18"
+        "outputId": "fbe40b64-3352-47e4-f7e2-54c0652337c7"
       },
       "source": [
         "from google.colab import drive\n",
@@ -108,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NqUEyec45rGt",
-        "outputId": "71cf0682-eeb5-4b0a-d28f-410e7f0ea997"
+        "outputId": "9e007e48-69d1-4025-dab2-ae37bebb713c"
       },
       "source": [
         "image.shape"
@@ -146,7 +147,7 @@
       "source": [
         "#cv2_imshow(image)"
       ],
-      "execution_count": 74,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -165,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SgTWw2Hj6T9H",
-        "outputId": "f61698a8-ca9a-46da-b8bb-b07447014846"
+        "outputId": "60ffa30d-e039-4b59-cf51-142e662cfd12"
       },
       "source": [
         "image = cv2.resize(image, (800,600))\n",
@@ -193,7 +194,7 @@
       "source": [
         "#cv2_imshow(image)"
       ],
-      "execution_count": 73,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -215,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GBYG4wsq67iy",
-        "outputId": "f9304f57-7a34-460b-ee93-5b3fe034f3af"
+        "outputId": "f6b393fa-5169-49b1-fb21-b0c0ffeb6309"
       },
       "source": [
         "600 * 800 * 3, 600 * 800"
@@ -253,7 +254,7 @@
       "source": [
         "#cv2_imshow(image_gray)"
       ],
-      "execution_count": 72,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -263,7 +264,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iD8gbETK7fxx",
-        "outputId": "f83f8eb0-7783-43f9-8c6a-a1f85a386370"
+        "outputId": "1d864c2e-cc46-401e-db97-c3eaabde2977"
       },
       "source": [
         "image_gray.shape"
@@ -289,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wbyjIPgr7jU4",
-        "outputId": "b9812b63-6131-455f-f10b-f7217bab98bb"
+        "outputId": "b8dd9c81-e542-4ae8-a0d9-4b421fa3a550"
       },
       "source": [
         "image.shape"
@@ -346,7 +347,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gmPlNa3l8ggo",
-        "outputId": "df9118f5-729d-4673-814d-98d326e8576c"
+        "outputId": "b65f3a36-73b3-495e-bf44-f26962f3c47a"
       },
       "source": [
         "detections"
@@ -377,7 +378,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_uXnttmB8kGK",
-        "outputId": "cf391792-cb56-4b0c-c814-3e97e13b2c40"
+        "outputId": "810f1f63-6003-4bd7-d3b5-c21a15bfd9cb"
       },
       "source": [
         "len(detections) #how many faces found"
@@ -421,7 +422,7 @@
         "                )\n",
         "#cv2_imshow(image)"
       ],
-      "execution_count": 71,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -447,7 +448,7 @@
         "  cv2.rectangle(image, (x,y), (x + w, y + h), (0, 255,0), 5)\n",
         "#cv2_imshow(image)"
       ],
-      "execution_count": 70,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -475,7 +476,7 @@
         "  cv2.rectangle(image, (x,y), (x + w, y + h), (0, 255,0), 2)\n",
         "#cv2_imshow(image)"
       ],
-      "execution_count": 69,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -495,7 +496,7 @@
       "source": [
         "eye_detector = cv2.CascadeClassifier(\"/content/drive/MyDrive/Computer Vision Masterclass/Cascades/haarcascade_eye.xml\")"
       ],
-      "execution_count": 39,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -523,7 +524,7 @@
         "  cv2.rectangle(image, (x,y), (x + w, y + h), (0, 0, 255), 2)\n",
         "#cv2_imshow(image)"
       ],
-      "execution_count": 68,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -543,7 +544,7 @@
       "source": [
         "full_body_detector = cv2.CascadeClassifier(\"/content/drive/MyDrive/Computer Vision Masterclass/Cascades/fullbody.xml\")"
       ],
-      "execution_count": 49,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -553,7 +554,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3WDKfxgDQDDb",
-        "outputId": "ae4f92f6-24ca-49d8-a27c-a6abc167c4d0"
+        "outputId": "c6d39cd9-8998-44d3-ee23-3a7fe8afdf8d"
       },
       "source": [
         "image = cv2.imread(\"/content/drive/MyDrive/Computer Vision Masterclass/Images/people3.jpg\")\n",
@@ -571,20 +572,17 @@
         "\n",
         "#cv2_imshow(image)"
       ],
-      "execution_count": 67,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[462  65  88 176]\n",
-            " [196  50  94 188]\n",
-            " [ 14  61  83 165]\n",
-            " [267  85  75 149]\n",
-            " [ 70  58  93 187]\n",
-            " [327  72  81 162]\n",
-            " [530 104  66 132]\n",
-            " [139  78  81 162]]\n"
+            "[[1635  156  147  147]\n",
+            " [ 284  262  114  114]\n",
+            " [1149  260  129  129]\n",
+            " [ 928  491  171  171]\n",
+            " [ 222  507  151  151]]\n"
           ]
         }
       ]
@@ -597,6 +595,295 @@
       "source": [
         "## HOG (Histograms of Oriented Gradients)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PSsHOUreYzSc"
+      },
+      "source": [
+        "### Dlib"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mJBZ33x9e13I"
+      },
+      "source": [
+        "import dlib"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BIRnFBeXe3Cw"
+      },
+      "source": [
+        "image = cv2.imread(\"/content/drive/MyDrive/Computer Vision Masterclass/Images/people2.jpg\")"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VnUTcTltfAEC"
+      },
+      "source": [
+        "#cv2_imshow(image)"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NBvntNTPfC1Z"
+      },
+      "source": [
+        "face_detector_hog = dlib.get_frontal_face_detector()"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cl0jpIsufMRR"
+      },
+      "source": [
+        "detections = face_detector_hog(image, 1)"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CUGx4lGufZ6K",
+        "outputId": "bb62ace4-edd2-4613-c31a-b873578ac42d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "detections, len(detections)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(rectangles[[(429, 38) (465, 74)], [(665, 90) (701, 126)], [(717, 103) (760, 146)], [(909, 70) (952, 113)], [(828, 98) (871, 142)], [(605, 70) (641, 106)], [(777, 62) (813, 98)], [(485, 78) (521, 114)], [(386, 60) (429, 103)], [(170, 41) (213, 84)], [(93, 89) (136, 132)], [(237, 50) (280, 94)], [(323, 50) (367, 94)], [(544, 65) (588, 108)]],\n",
+              " 14)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gl0zPZDwfbua"
+      },
+      "source": [
+        "for face in detections:\n",
+        "  # print(face.left())\n",
+        "  # print(face.top())\n",
+        "  # print(face.right())\n",
+        "  # print(face.bottom())\n",
+        "  l, t, r, b = face.left(), face.top(), face.right(), face.bottom()\n",
+        "  cv2.rectangle(image, (l, t), (r, b), (0, 255, 255), 2)\n",
+        "#cv2_imshow(image)"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A4zZvFHUhIM0"
+      },
+      "source": [
+        "## CNN with Dlib"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fGxielwlibnP"
+      },
+      "source": [
+        "image = cv2.imread(\"/content/drive/MyDrive/Computer Vision Masterclass/Images/people2.jpg\")"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bmC6ACV4ie_H"
+      },
+      "source": [
+        "cnn_detector = dlib.cnn_face_detection_model_v1(\"/content/drive/MyDrive/Computer Vision Masterclass/Weights/mmod_human_face_detector.dat\")"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7eJdLIluiwJ-",
+        "outputId": "513574d5-4120-4cea-e1ce-bc982d6128e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "detections = cnn_detector(image, 1)\n",
+        "for face in detections:\n",
+        "  l, t, r, b, c = face.rect.left(), face.rect.top(), face.rect.right(), face.rect.bottom(), face.confidence\n",
+        "  print(c)\n",
+        "  cv2.rectangle(image, (l, t), (r, b), (0, 0, 255), 2)\n",
+        "#cv2_imshow(image)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.1440614461898804\n",
+            "1.137049913406372\n",
+            "1.1278995275497437\n",
+            "1.1200283765792847\n",
+            "1.1149375438690186\n",
+            "1.1131553649902344\n",
+            "1.0975688695907593\n",
+            "1.0942121744155884\n",
+            "1.085315227508545\n",
+            "1.0801889896392822\n",
+            "1.0800762176513672\n",
+            "1.0784764289855957\n",
+            "1.066403865814209\n",
+            "1.0641791820526123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R_z4n1ZWksO5"
+      },
+      "source": [
+        "### Comparing haarcascade vs HOG vs CNN"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5cI4EOHAnuq8"
+      },
+      "source": [
+        "### haarscale"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TMswUV55mtwI"
+      },
+      "source": [
+        "image = cv2.imread(\"/content/drive/MyDrive/Computer Vision Masterclass/Images/people3.jpg\")\n",
+        "#image = cv2.resize(image, (800, 600))\n",
+        "image_gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+        "detections = face_detector.detectMultiScale(image_gray, scaleFactor=1.001, \n",
+        "                                            minNeighbors=5,\n",
+        "                                            minSize=(5,5),\n",
+        "                                            #maxSize=(50,50)\n",
+        "                                            )\n",
+        "for (x, y, w, h) in detections:\n",
+        "  cv2.rectangle(image, (x,y), (x + w, y + h), (0, 255,0), 2)\n",
+        "#cv2_imshow(image)"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZoC63UvknPJD"
+      },
+      "source": [
+        "### HOG"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IgofIN3Unz9w"
+      },
+      "source": [
+        "image = cv2.imread(\"/content/drive/MyDrive/Computer Vision Masterclass/Images/people3.jpg\")\n",
+        "face_detector_hog = dlib.get_frontal_face_detector()\n",
+        "detections = face_detector_hog(image, 4)\n",
+        "for face in detections:\n",
+        "  # print(face.left())\n",
+        "  # print(face.top())\n",
+        "  # print(face.right())\n",
+        "  # print(face.bottom())\n",
+        "  l, t, r, b = face.left(), face.top(), face.right(), face.bottom()\n",
+        "  cv2.rectangle(image, (l, t), (r, b), (0, 255, 255), 2)\n",
+        "#cv2_imshow(image)"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "52Cs4me4n9jn"
+      },
+      "source": [
+        "### CNN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t3Mhd9KToUkw"
+      },
+      "source": [
+        "# image = cv2.imread(\"/content/drive/MyDrive/Computer Vision Masterclass/Images/people3.jpg\")\n",
+        "\n",
+        "# cnn_detector = dlib.cnn_face_detection_model_v1(\"/content/drive/MyDrive/Computer Vision Masterclass/Weights/mmod_human_face_detector.dat\")\n",
+        "# detections = cnn_detector(image, 4)\n",
+        "# for face in detections:\n",
+        "#   l, t, r, b, c = face.rect.left(), face.rect.top(), face.rect.right(), face.rect.bottom(), face.confidence\n",
+        "#   print(c)\n",
+        "#   cv2.rectangle(image, (l, t), (r, b), (0, 0, 255), 1)\n",
+        "#cv2_imshow(image)"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IQgRc9ygoddf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 37,
+      "outputs": []
     }
   ]
 }
